fix alignment of toggle display eye

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -95,5 +95,9 @@ body.editing .section .activity.hot .mod-indent-outer {
     color: $brand-success !important;
 }
 
+.togglevisibility {
+    padding: 0 0 .2rem .5rem;
+}
+
 
 
